test/parsing/errors/bisonSyntaxError.compopts
--detailed-errors # bisonSyntaxError-detailed.good
--no-detailed-errors # bisonSyntaxError-brief.good
